--- a/frontend/assets/styles.css
+++ b/frontend/assets/styles.css
@@ -4,12 +4,9 @@ html {
 }
 
 body {
-    /*
-        - Color palette used: https://coolors.co/palette/cdb4db-ffc8dd-ffafcc-bde0fe-a2d2ff
-        - Website used to make gradient: https://cssgradient.io/
-    */
-    background: rgb(205, 180, 219);
-    background: linear-gradient(153deg, rgba(205, 180, 219, 1) 0%, rgba(255, 200, 221, 1) 15%, rgba(255, 175, 204, 1) 50%, rgba(189, 224, 254, 1) 90%, rgba(162, 210, 255, 1) 100%);
+
+    background: rgb(205,180,219);
+    background: linear-gradient(133deg, rgba(205,180,219,1) 20%, rgba(255,200,221,1) 30%, rgba(255,175,204,1) 50%, rgba(189,224,254,1) 80%, rgba(162,210,255,1) 90%);
 }
 
 /* Font coming from: https://fonts.google.com/selection/embed */
